Fix display overflow

--- a/output.css
+++ b/output.css
@@ -658,6 +658,10 @@ video {
   gap: 1rem;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
